Added workchain_id, limit and offset parameters to /top/whales
